--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <html ng-app="sampleApp">
   <head>
+  	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/1.1.1/angularfire.min.js"></script>
 	<script src="script.js"></script>
   </head>
   <body ng-controller="SampleCtrl">
-  	<div ng-repeat="type in messageTypes">
+  	<div class="message-list" ng-repeat="type in messageTypes">
 	  	<h1>Lista {{type}}</h1>
 	    <ul>
-	      <li ng-repeat="message in messages | filter: {type: type}">
+	      <li class="message" ng-repeat="message in messages | filter: {type: type} | orderBy: 'votes':true">
 	      	<strong>{{ message.votes }} Votes</strong>
+	        <span>{{message.text}}</span>
 	        <button ng-click="addVote(message.$id, message.votes)">+ 1</button>
-	        <input ng-model="message.text" ng-change="messages.$save(message)" />
+	        
+	        <!-- <input ng-model="message.text" ng-change="messages.$save(message)" /> -->
 	        <button ng-click="messages.$remove(message)">Delete Message</button>
 	      </li>
 	    </ul>
     </div>
-    <form ng-submit="addMessage()">
-      <input ng-model="newMessageText" />
-      <select ng-model="newMessageType">
-	      <option>1</option>
-	      <option>2</option>
-	      <option>3</option>
-      </select>
-      <button type="submit">Add Message</button>
-    </form>
+    <div>
+	   	<form ng-submit="addMessage()">
+	      <input ng-model="newMessageText" />
+	      <select ng-model="newMessageType">
+		      <option>1</option>
+		      <option>2</option>
+		      <option>3</option>
+	      </select>
+	      <button type="submit">Add Message</button>
+	    </form>
+    </div>
   </body>
 </html>
