--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html ng-app="sampleApp">
   <head>
+ 	<meta charset="UTF-8">
   	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
@@ -13,10 +14,9 @@
 	      <li class="message" ng-repeat="message in messages | filter: {type: type} | orderBy: 'votes':true">
 	      	<strong>{{ message.votes }} Votes</strong>
 	        <span>{{message.text}}</span>
-	        <button ng-click="addVote(message.$id, message.votes)">+ 1</button>
-	        
+	        <a ng-hide="alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)">✔</a>
+	        <a href="javascript:void(0)" ng-click="messages.$remove(message)">✘</a>
 	        <!-- <input ng-model="message.text" ng-change="messages.$save(message)" /> -->
-	        <button ng-click="messages.$remove(message)">Delete Message</button>
 	      </li>
 	    </ul>
     </div>
