--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html ng-app="sampleApp">
   <head>
  	<meta charset="UTF-8">
+  	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
@@ -9,25 +10,25 @@
   </head>
   <body ng-controller="SampleCtrl">
   	<div class="message-list" ng-repeat="type in messageTypes">
-	  	<h1>Lista {{type}}</h1>
+	  	<h1>{{type.value}}</h1>
 	    <ul>
-	      <li class="message" ng-repeat="message in messages | filter: {type: type} | orderBy: 'votes':true">
-	      	<strong>{{ message.votes }} Votes</strong>
-	        <span>{{message.text}}</span>
-	        <a ng-hide="alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)">✔</a>
-	        <a href="javascript:void(0)" ng-click="messages.$remove(message)">✘</a>
-	        <!-- <input ng-model="message.text" ng-change="messages.$save(message)" /> -->
+	      <li class="message" ng-repeat="message in messages | filter: {type: {id: type.id}} | orderBy: 'votes':true">
+	      	<div class="message-body">
+	        	<span>{{message.text}}</span>
+	        	<a href="javascript:void(0)" ng-click="messages.$remove(message)">✘</a>
+	        	<!-- <input ng-model="message.text" ng-change="messages.$save(message)" /> -->
+	        </div>
+	        <div class="votes">
+	        	<a ng-hide="alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)">✔</a>
+	        	<strong>{{ message.votes }} votes</strong>
+	        </div>
 	      </li>
 	    </ul>
     </div>
     <div>
 	   	<form ng-submit="addMessage()">
 	      <input ng-model="newMessageText" />
-	      <select ng-model="newMessageType">
-		      <option>1</option>
-		      <option>2</option>
-		      <option>3</option>
-	      </select>
+	      <select ng-model="newMessageType" ng-options="type as type.value for type in messageTypes"></select>
 	      <button type="submit">Add Message</button>
 	    </form>
     </div>
