--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html ng-app="sampleApp">
   <head>
  	<meta charset="UTF-8">
+ 	<link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
@@ -12,13 +13,14 @@
   	<div class="message-list" ng-repeat="type in messageTypes">
 	  	<h1>{{type.value}}</h1>
 	    <ul>
-	      <li class="message" ng-repeat="message in messages | filter: {type: {id: type.id}} | orderBy: 'votes':true">
+	      <li class="message" ng-class="{'flip': isEditing, 'bg-yellow': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}} | orderBy: 'votes':true">
 	      	<div class="message-body">
-	        	<span>{{message.text}}</span>
-	        	<a href="javascript:void(0)" ng-click="messages.$remove(message)">✘</a>
-	        	<!-- <input ng-model="message.text" ng-change="messages.$save(message)" /> -->
+	        	<span ng-show="!isEditing">{{message.text}}</span>
+	        	<a ng-show="!isEditing" href="javascript:void(0)" ng-click="messages.$remove(message)">✘</a>
+	        	<a href="javascript:void(0)" ng-click="isEditing = isEditing ? false : true;">✎</a>
+	        	<input ng-show="isEditing" ng-model="message.text" ng-change="messages.$save(message)" />
 	        </div>
-	        <div class="votes">
+	        <div ng-show="!isEditing" class="votes">
 	        	<a ng-hide="alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)">✔</a>
 	        	<strong>{{ message.votes }} votes</strong>
 	        </div>
