--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
  	<meta charset="UTF-8">
  	<link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  	<link rel="stylesheet" type="text/css" href="style.css">
+  	<link rel="stylesheet" type="text/css" href="base.css">
+  	<link rel="stylesheet" type="text/css" href="message.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
 	<script src="https://cdn.firebase.com/libs/angularfire/1.1.1/angularfire.min.js"></script>
@@ -16,20 +17,24 @@
 	    <ul class="column column_{{ type.id }}">
 	      <h2>{{type.value}}<a ng-click="addNew(type)" href="javascript:void(0)">+</a></h2>
 	      <li class="message" ng-class="{'flip': isEditing, 'bg-navy': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}} | orderBy: 'votes':true">
-	      	<div class="message-body">
-	      		<div ng-show="!isEditing">
+	      	<div class="front">
+		      	<div class="message-body">
 	        		<span >{{message.text}}</span>
 	        		<a href="javascript:void(0)" ng-click="isEditing = true;">✎</a>
-	        	</div>
-	        	<div ng-show="isEditing" class="editing">
-	        		<textarea ng-model="message.text" ng-change="messages.$save(message)"></textarea>
-	        		<a href="javascript:void(0)" ng-click="deleteMessage(message)">✘</a>
-	        		<button ng-click="isEditing = false;">Done</button>
-	        	</div>
+		        </div>
+		        <div class="votes">
+		        	<a ng-hide="alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)"><img src="like.png" /></a>
+		        	<strong>+ {{ message.votes }}</strong>
+		        </div>
 	        </div>
-	        <div ng-show="!isEditing" class="votes">
-	        	<a ng-hide="alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)"><img src="like.png" /></a>
-	        	<strong>+ {{ message.votes }}</strong>
+	        <div class="back">
+	        	<div class="message-body">
+		        	<div class="editing">
+		        		<textarea ng-model="message.text" ng-change="messages.$save(message)"></textarea>
+		        		<a href="javascript:void(0)" ng-click="deleteMessage(message)">✘</a>
+		        		<button ng-click="isEditing = false;">Done</button>
+		        	</div>
+		        </div>
 	        </div>
 	      </li>
 	    </ul>
