--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html ng-app="sampleApp">
   <head>
  	<meta charset="UTF-8">
- 	<link rel=stylesheet href="https://s3-us-west-2.amazonaws.com/colors-css/2.2.0/colors.min.css">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   	<link rel="stylesheet" type="text/css" href="base.css">
   	<link rel="stylesheet" type="text/css" href="message.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-	<script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
-	<script src="https://cdn.firebase.com/libs/angularfire/1.1.1/angularfire.min.js"></script>
+	<script src="angular.min.js"></script>
+	<script src="firebase.js"></script>
+	<script src="angularfire.min.js"></script>
 	<script src="script.js"></script>
   </head>
   <body ng-controller="MainCtrl">
@@ -16,7 +15,7 @@
   	<div class="message-list" ng-repeat="type in messageTypes">
 	    <ul class="column column_{{ type.id }}">
 	      <h2>{{type.value}}<a ng-click="addNew(type)" href="javascript:void(0)">+</a></h2>
-	      <li class="message" ng-class="{'flip': isEditing, 'bg-navy': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}} | orderBy: 'votes':true" ng-style="{'top': $index * 150 + 150 + 'px'}">
+	      <li class="message" ng-class="{'flip': isEditing, 'bg-navy': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': getHeight(message, $index) }">
 	      	<div class="hacker">
 		      	<div class="front">
 			      	<div class="message-body">
