--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   	<link rel="stylesheet" type="text/css" href="base.css">
   	<link rel="stylesheet" type="text/css" href="message.css">
 	<script src="angular.min.js"></script>
+	<script src="zepto.min.js"></script>
 	<script src="firebase.js"></script>
 	<script src="angularfire.min.js"></script>
 	<script src="script.js"></script>
@@ -15,7 +16,7 @@
   	<div class="message-list" ng-repeat="type in messageTypes">
 	    <ul class="column column_{{ type.id }}">
 	      <h2>{{type.value}}<a ng-click="addNew(type)" href="javascript:void(0)">+</a></h2>
-	      <li class="message" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': getHeight(message, $index) }">
+	      <li id="{{ message.$id }}" class="message" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': getHeight(message, $index) }">
 	      	<div class="hacker">
 		      	<div class="front">
 			      	<div class="message-body">
