fixing new line on cards

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	      	<div class="hacker">
 		      	<div class="front">
 			      	<div class="message-body">
-		        		<span>{{message.text}}</span>
+		        		<div style="white-space: pre;">{{message.text}}</div>
 		        		<a href="javascript:void(0)" ng-click="isEditing = true; focusElement(message.$id);">✎</a>
 			        </div>
 			        <div class="votes">
