--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body ng-controller="MainCtrl">
   	<header>
-  		<h1>Firedeaz - {{boardId}}</h1>
+  		<h1>Fireideaz - {{boardId}}</h1>
 		<span>
 			<button ng-show="board[0].columns.length < 5" ng-click="openDialogColumn()">Add new column</button>
 			<button ng-click="openDialogBoard()">Create new board</button>
