--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
 	<h1 ng-show="boardId == ''">Invalid Board<small>Choose a name to insert after ♯ in the url</small></h1>
   	<span ng-show="boardId != ''" class="message-list" style="width: {{ 100 / board[0].columns.length - 1 }}%" ng-repeat="type in board[0].columns">
 	    <ul class="column column_{{ type.id }}">
-	      <h2>
-	      	<a class="controls delete" ng-show="showRemoveColumn(type.id) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
-	      	<a class="controls edit" ng-show="!editing" href="javascript:void(0)" ng-click="editing = true; newName=type.value;">✎</a>
+	      <a class="controls delete" ng-show="showRemoveColumn(type.id) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
+	      <h2 ng-click="editing = true; newName=type.value;">
 	      	<span ng-show="!editing">{{type.value}}</span>
-	      	<input id="new_name_{{ type.id }}" ng-model="newName" ng-show="editing"></input>
-	      	<button ng-click="changeColumnName(type.id, newName)" ng-show="editing">Save</button>
-	      	<button ng-show="editing" ng-click="editing=false;">Cancel</button>
 	      	<a ng-show="!editing" ng-click="addNew(type)" href="javascript:void(0)">+</a>
 	      </h2>
+	      <div class="editing-column">
+	      	  <input id="new_name_{{ type.id }}" ng-model="newName" ng-show="editing"></input>
+		      <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
+	      	  <a ng-show="editing" class="blue" ng-click="editing=false;">Cancel</a>
+      	  </div>
 	      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board[0].columns.length - 1}}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': getHeight(message, $index) }">
 	      	<div class="front">
 		      	<div class="message-body">
