--- a/index.html
+++ b/index.html
@@ -25,40 +25,42 @@
 		</span>
   	</header>
 	<h1 ng-show="boardId == ''">Invalid Board<small>Choose a name to insert after ♯ in the url</small></h1>
-  	<span ng-show="boardId != ''" class="message-list" style="width: {{ 100 / board[0].columns.length - 1 }}%" ng-repeat="type in board[0].columns">
-	    <ul class="column column_{{ type.id }}">
-	      <a class="controls delete" ng-show="showRemoveColumn(type.id) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
-	      <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
-	      	{{type.value}}
-	      </h2>
-	      <a ng-show="!editing" class="add" ng-click="addNew(type)" href="javascript:void(0)">+</a>
-	      <div class="editing-column">
-	      	  <input id="new_name_{{ type.id }}" ng-model="newName" ng-show="editing"></input>
-		      <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
-	      	  <a ng-show="editing" class="blue" ng-click="editing=false;">Cancel</a>
-      	  </div>
-	      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board[0].columns.length - 1}}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': getHeight(message, $index) }">
-	      	<div class="front">
-		      	<div class="message-body">
-	        		<div class="text">{{message.text}}</div>
-	        		<a href="javascript:void(0)" ng-click="isEditing = true; focusElement(message.$id);">✎</a>
+  	<span class="container">
+	  	<span ng-show="boardId != ''" class="message-list" style="width: {{ 100 / board[0].columns.length - 2 }}%" ng-repeat="type in board[0].columns">
+		    <ul class="column column_{{ type.id }}">
+		      <a class="controls delete" ng-show="showRemoveColumn(type.id) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
+		      <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
+		      	{{type.value}}
+		      </h2>
+		      <a ng-show="!editing" class="add" ng-click="addNew(type)" href="javascript:void(0)">+</a>
+		      <div class="editing-column">
+		      	  <input id="new_name_{{ type.id }}" ng-model="newName" ng-show="editing"></input>
+			      <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
+		      	  <a ng-show="editing" class="blue" ng-click="editing=false;">Cancel</a>
+	      	  </div>
+		      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board[0].columns.length - 2.2}}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': getHeight(message, $index) }">
+		      	<div class="front">
+			      	<div class="message-body">
+		        		<div class="text">{{message.text}}</div>
+		        		<a href="javascript:void(0)" ng-click="isEditing = true; focusElement(message.$id);">✎</a>
+			        </div>
+			        <div class="votes">
+			        	<a ng-hide="alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)"><img src="like.png" /></a>
+			        	<strong>+ {{ message.votes }}</strong>
+			        </div>
 		        </div>
-		        <div class="votes">
-		        	<a ng-hide="alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)"><img src="like.png" /></a>
-		        	<strong>+ {{ message.votes }}</strong>
+		        <div class="back">
+		        	<div class="message-body">
+			        	<div class="editing">
+			        		<textarea maxlength="195" ng-model="message.text" ng-change="messages.$save(message)"></textarea>
+			        		<a href="javascript:void(0)" ng-click="deleteMessage(message)">✖</a>
+			        		<button ng-click="isEditing = false;">Done</button>
+			        	</div>
+			        </div>
 		        </div>
-	        </div>
-	        <div class="back">
-	        	<div class="message-body">
-		        	<div class="editing">
-		        		<textarea maxlength="195" ng-model="message.text" ng-change="messages.$save(message)"></textarea>
-		        		<a href="javascript:void(0)" ng-click="deleteMessage(message)">✖</a>
-		        		<button ng-click="isEditing = false;">Done</button>
-		        	</div>
-		        </div>
-	        </div>
-	      </li>
-	    </ul>
+		      </li>
+		    </ul>
+	    </span>
     </span>
   </body>
   <script type="text/ng-template" id="addNewColumn">
