--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
   <head>
  	<meta charset="UTF-8">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  	<link rel="stylesheet" type="text/css" href="base.css">
-  	<link rel="stylesheet" type="text/css" href="message.css">
-  	<link rel="stylesheet" type="text/css" href="header.css">
-  	<link rel="stylesheet" type="text/css" href="ngDialog-theme-default.min.css">
-  	<link rel="stylesheet" type="text/css" href="ngDialog-theme-plain.min.css">
-  	<link rel="stylesheet" type="text/css" href="ngDialog.min.css">
-  	<link rel="stylesheet" type="text/css" href="colors.min.css">
-	<script src="angular.min.js"></script>
-	<script src="zepto.min.js"></script>
-	<script src="firebase.js"></script>
-	<script src="angularfire.min.js"></script>
-	<script src="ngDialog.min.js"></script>
-	<script src="script.js"></script>
+  	<link rel="stylesheet" type="text/css" href="css/base.css">
+  	<link rel="stylesheet" type="text/css" href="css/message.css">
+  	<link rel="stylesheet" type="text/css" href="css/header.css">
+  	<link rel="stylesheet" type="text/css" href="css/vendor/ngDialog-theme-default.min.css">
+  	<link rel="stylesheet" type="text/css" href="css/vendor/ngDialog-theme-plain.min.css">
+  	<link rel="stylesheet" type="text/css" href="css/vendor/ngDialog.min.css">
+  	<link rel="stylesheet" type="text/css" href="css/vendor/colors.min.css">
+	<script src="js/vendor/angular.min.js"></script>
+	<script src="js/vendor/zepto.min.js"></script>
+	<script src="js/vendor/firebase.js"></script>
+	<script src="js/vendor/angularfire.min.js"></script>
+	<script src="js/vendor/ngDialog.min.js"></script>
+	<script src="js/script.js"></script>
   </head>
   <body ng-controller="MainCtrl">
   	<header>
