--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html ng-app="sampleApp">
+<html ng-app="fireideaz">
   <head>
  	<meta charset="UTF-8">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -15,6 +15,8 @@
 	<script src="js/vendor/angularfire.min.js"></script>
 	<script src="js/vendor/ngDialog.min.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/newBoardDialog.js"></script>
+	<script src="js/newColumnDialog.js"></script>
   </head>
   <body ng-controller="MainCtrl">
   	<header>
@@ -63,14 +65,6 @@
 	    </span>
     </span>
   </body>
-  <script type="text/ng-template" id="addNewColumn">
-	<h1>New column</h1>
-	<input ng-model="newColumn" type="text"></input>
-	<button ng-click="addNewColumn(newColumn); newColumn='';">Add</button>
-  </script>
-  <script type="text/ng-template" id="addNewBoard">
-	<h1>New board</h1>
-	<input ng-model="newBoard" type="text"></input>
-	<button ng-click="createNewBoard(newBoard); newBoard='';">Create</button>
-  </script>
+  <new-column-dialog></new-column-dialog>
+  <new-board-dialog></new-board-dialog>
 </html>
