adding enter click directive to index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="js/dialogController.js"></script>
 	<script src="js/newBoardDialog.js"></script>
 	<script src="js/newColumnDialog.js"></script>
+	<script src="js/enterClick.js"></script>
   </head>
   <body ng-controller="MainCtrl">
   	<header>
