--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   	</header>
 	<h1 ng-show="boardId == ''">Invalid Board<small>Choose a name to insert after ♯ in the url</small></h1>
   	<span class="container">
-	  	<span ng-show="boardId != ''" class="message-list" style="width: {{ 100 / board[0].columns.length - 2 }}%" ng-repeat="type in board[0].columns">
+	  	<span ng-show="boardId != ''" class="message-list" ng-repeat="type in board[0].columns">
 		    <ul class="column column_{{ type.id }}">
 		      <a class="controls delete" ng-show="showRemoveColumn(type.id) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
 		      <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
@@ -39,7 +39,7 @@
 			      <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
 		      	  <a ng-show="editing" class="blue" ng-click="editing=false;">Cancel</a>
 	      	  </div>
-		      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board[0].columns.length - 2 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': getHeight(message, $index) }">
+		      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board[0].columns.length - 1.5 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': getHeight(message, $index) }">
 		      	<div class="front">
 			      	<div class="message-body">
 		        		<div class="text">{{message.text}}</div>
