add widget to star on github

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<span>
 			<button ng-show="board[0].columns.length < 6" ng-click="openDialogColumn()">Add new column</button>
 			<button ng-click="openDialogBoard()">Create new board</button>
+			<iframe src="https://ghbtns.com/github-btn.html?user=glauberramos&repo=firedeaz&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
 		</span>
   	</header>
 	<h1 ng-show="boardId == ''">Invalid Board<small>Choose a name to insert after ♯ in the url</small></h1>
