--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<h1>New board</h1>
 	<p>Board name example: <strong>team-board-123</strong></p>
 	<input ng-model="newBoard.name" ng-change="boardNameChanged()" type="text" placeholder="Board name"></input>
-	<button ng-click="createNewBoard(); newBoard.name='';">Create</button>
+	<button ng-click="createNewBoard()">Create</button>
   </script>
   <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
