--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<script src="js/vendor/firebase.js"></script>
 	<script src="js/vendor/angularfire.min.js"></script>
 	<script src="js/vendor/ngDialog.min.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/utils.js"></script>
 	<script src="js/mainController.js"></script>
 	<script src="js/enterClick.js"></script>
   </head>
@@ -30,7 +32,7 @@
   	<span class="container">
 	  	<span ng-show="boardId != ''" class="message-list" ng-repeat="type in board[0].columns">
 		    <ul class="column column_{{ type.id }}">
-		      <a class="controls delete" ng-show="showRemoveColumn(type.id) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
+		      <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board[0].columns) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
 		      <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
 		      	{{type.value}}
 		      </h2>
@@ -40,14 +42,14 @@
 			      <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
 		      	  <a ng-show="editing" class="blue" ng-click="editing=false;">Cancel</a>
 	      	  </div>
-		      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board[0].columns.length - 1.5 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': getHeight(message, $index) }">
+		      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board[0].columns.length - 1.5 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': utils.getHeight(message, $index) }">
 		      	<div class="front">
 			      	<div class="message-body">
 		        		<div class="text">{{message.text}}</div>
-		        		<a href="javascript:void(0)" ng-click="isEditing = true; focusElement(message.$id);">✎</a>
+		        		<a href="javascript:void(0)" ng-click="isEditing = true; utils.focusElement(message.$id);">✎</a>
 			        </div>
 			        <div class="votes">
-			        	<a ng-hide="alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)"><img src="img/like.png" /></a>
+			        	<a ng-hide="utils.alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)"><img src="img/like.png" /></a>
 			        	<strong>+ {{ message.votes }}</strong>
 			        </div>
 		        </div>
