--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="js/vendor/angularfire.min.js"></script>
 	<script src="js/vendor/ngDialog.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/auth.js"></script>
 	<script src="js/utils.js"></script>
 	<script src="js/mainController.js"></script>
 	<script src="js/enterClick.js"></script>
