--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
   	<header>
   		<h1>Fireideaz - {{boardId}}</h1>
 		<span>
-			<button ng-show="board[0].columns.length < 6" ng-click="utils.openDialogColumn(this)">Add new column</button>
+			<button ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">Add new column</button>
 			<button ng-click="utils.openDialogBoard(this)">Create new board</button>
 			<iframe src="https://ghbtns.com/github-btn.html?user=glauberramos&repo=firedeaz&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
 		</span>
   	</header>
 	<h1 ng-show="boardId == ''">Invalid Board<small>Choose a name to insert after ♯ in the url</small></h1>
   	<span class="container">
-	  	<span ng-show="boardId != ''" class="message-list" ng-repeat="type in board[0].columns">
+	  	<span ng-show="boardId != ''" class="message-list" ng-repeat="type in board.columns">
 		    <ul class="column column_{{ type.id }}">
-		      <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board[0].columns) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
+		      <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
 		      <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
 		      	{{type.value}}
 		      </h2>
@@ -43,7 +43,7 @@
 			      <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
 		      	  <a ng-show="editing" class="blue" ng-click="editing=false;">Cancel</a>
 	      	  </div>
-		      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board[0].columns.length - 1.5 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': utils.getHeight(message, $index) }">
+		      <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board.columns.length - 1.5 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': utils.getHeight(message, $index) }">
 		      	<div class="front">
 			      	<div class="message-body">
 		        		<div class="text">{{message.text}}</div>
