--- a/index.html
+++ b/index.html
@@ -2,24 +2,8 @@
   <head>
  	<meta charset="UTF-8">
   	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  	<link rel="stylesheet" type="text/css" href="css/base.css">
-  	<link rel="stylesheet" type="text/css" href="css/message.css">
-  	<link rel="stylesheet" type="text/css" href="css/header.css">
-  	<link rel="stylesheet" type="text/css" href="css/spinner.css">
-  	<link rel="stylesheet" type="text/css" href="css/vendor/ngDialog-theme-default.min.css">
-  	<link rel="stylesheet" type="text/css" href="css/vendor/ngDialog-theme-plain.min.css">
-  	<link rel="stylesheet" type="text/css" href="css/vendor/ngDialog.min.css">
-  	<link rel="stylesheet" type="text/css" href="css/vendor/colors.min.css">
-	<script src="js/vendor/angular.min.js"></script>
-	<script src="js/vendor/zepto.min.js"></script>
-	<script src="js/vendor/firebase.js"></script>
-	<script src="js/vendor/angularfire.min.js"></script>
-	<script src="js/vendor/ngDialog.min.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/auth.js"></script>
-	<script src="js/utils.js"></script>
-	<script src="js/mainController.js"></script>
-	<script src="js/enterClick.js"></script>
+  	<link rel="stylesheet" type="text/css" href="dist/main.css">
+	<script src="dist/main.js"></script>
   </head>
   <body ng-controller="MainCtrl">
   	<header>
