Adding livereload and changing buttons style

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   	<header>
   		<h1>Fireideaz - {{boardId}}</h1>
 		<span>
-			<button ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">Add new column</button>
-			<button ng-click="utils.openDialogBoard(this)">Create new board</button>
+			<button ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">New column</button>
+			<button ng-click="utils.openDialogBoard(this)">New board</button>
 			<iframe src="https://ghbtns.com/github-btn.html?user=glauberramos&repo=firedeaz&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
 		</span>
   	</header>
