--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   	<span class="container">
 	  	<span ng-show="boardId != ''" class="message-list" ng-repeat="type in board.columns">
 		    <ul class="column column_{{ type.id }}">
-		      <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()">✖</a>
+		      <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()"><i class="fa fa-times"></i></a>
 		      <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
 		      	{{type.value}}
 		      </h2>
-		      <a ng-show="!editing" class="add" ng-click="addNewMessage(type)" href="javascript:void(0)">+</a>
+		      <a ng-show="!editing" class="add" ng-click="addNewMessage(type)" href="javascript:void(0)"><i class="fa fa-plus"></i></a>
 		      <div class="editing-column">
 		      	  <input id="new_name_{{ type.id }}" ng-model="newName" ng-show="editing"></input>
 			      <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
@@ -45,7 +45,7 @@
 		        	<div class="message-body">
 			        	<div class="editing">
 			        		<textarea maxlength="195" ng-model="message.text" ng-change="messages.$save(message)"></textarea>
-			        		<a href="javascript:void(0)" ng-click="deleteMessage(message)">✖</a>
+			        		<a class="delete-link" href="javascript:void(0)" ng-click="deleteMessage(message)"><i class="fa fa-times"></i></a>
 			        		<button ng-click="isEditing = false;">Done</button>
 			        	</div>
 			        </div>
