--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		      	<div class="front">
 			      	<div class="message-body">
 		        		<div class="text">{{message.text}}</div>
-		        		<a href="javascript:void(0)" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
+		        		<a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
 			        </div>
 			        <div class="votes">
 			        	<a href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)">
