--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<span>
 			<button ng-show="board.columns.length < 6" ng-click="utils.openDialogColumn(this)">New column</button>
 			<button ng-click="utils.openDialogBoard(this)">New board</button>
-			<iframe src="https://ghbtns.com/github-btn.html?user=glauberramos&repo=firedeaz&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
+			<iframe src="https://ghbtns.com/github-btn.html?user=glauberramos&repo=fireideaz&type=star&count=true" frameborder="0" scrolling="0" width="80px" height="20px"></iframe>
 		</span>
   	</header>
 	<h1 ng-show="boardId == ''">Invalid Board<small>Choose a name to insert after ♯ in the url</small></h1>
