--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a href="javascript:void(0)" class="pencil" ng-click="isEditing = true; utils.focusElement(message.$id);"><i class="fa fa-pencil"></i></a>
                     </div>
                     <div class="votes">
-                        <a href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)">
+                        <a ng-hide="utils.alreadyVoted(message.$id)" href="javascript:void(0)" ng-click="addVote(message.$id, message.votes)">
                             <i class="fa fa-thumbs-o-up"></i>
                         </a>
                         <strong>+ {{ message.votes }}</strong>
