--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </span>
     </header>
     <span class="container">
-        <span ng-show="boardId !== ''" class="message-list" ng-repeat="(index, type) in board.columns">
+        <span ng-show="boardId !== ''" class="message-list" ng-repeat="type in board.columns">
             <ul class="column column_{{ type.id }}">
               <a class="controls delete" ng-show="utils.showRemoveColumn(type.id, board.columns) && !editing" href="javascript:void(0)" ng-click="deleteLastColumn()"><i class="fa fa-times"></i></a>
               <h2 ng-show="!editing" ng-click="editing = true; newName=type.value;">
@@ -30,7 +30,7 @@
                   <button ng-click="changeColumnName(type.id, newName)" ng-show="editing" class="success-button">Save</button>
                   <a ng-show="editing" class="blue" ng-click="editing=false;">Cancel</a>
               </div>
-              <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board.columns.length - 1.5 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': utils.getHeight(message, index) }">
+              <li id="{{ message.$id }}" enter-click class="message" style="width: {{ 100 / board.columns.length - 1.5 }}%" ng-class="{'flip': isEditing}" ng-repeat="message in messages | filter: {type: {id: type.id}}" ng-style="{'top': utils.getHeight(message, $index) }">
                 <div class="front">
                     <div class="message-body">
                         <div class="text">{{message.text}}</div>
